[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Brain Games. 5 games for your brains: Even, Calculator, GCD, Progression, Prime"
authors = ["Nickkky19 <nickkky19@mail.ru>"]
readme = "README.md"
packages = [{include = "brain_games"}]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games_run:main"
brain-even = "brain_games.scripts.brain_even_run:main"
brain-calc = "brain_games.scripts.brain_calc_run:main"
brain-gcd = "brain_games.scripts.brain_gcd_run:main"
brain-progression = "brain_games.scripts.brain_progression_run:main"
brain-prime = "brain_games.scripts.brain_prime_run:main"
